--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,3 +5,36 @@ set-window-option mode-keys vi
 
 set -g mouse on
 
+set -g base-index 1 # window index starts at 1
+
+# config reload
+bind r source-file ~/.config/tmux/tmux.conf
+
+# pane switch with alt + vi keys
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# DESIGN
+
+# copy mode
+setw -g mode-style 'fg=yellow bg=black bold'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify centre
+set -g status-style 'fg=white bg=#082A36'
+
+# set -g status-left '[#S]'
+set -g status-left-length 10
+
+set -g status-right "#(echo '#{pane_current_path}' | sed 's#$HOME#~#; s#\\([^/]*/[^/]*/\\).*\\(/[^/]*/.*\\)$#\\1 ... \\2#; s#/# > #g')" # 'yo' #'#{pane_current_path}' 
+
+set -g status-right-length 50
+
+setw -g window-status-current-format ' #I #W #F '
+setw -g window-status-current-style 'fg=pink italics bold'
+
+setw -g window-status-style ' fg=white dim'
+setw -g window-status-format ' #I #W #F '
