small aesthetic updates from Mercury

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -21,6 +21,10 @@ bind -n M-l select-pane -R
 
 # DESIGN --v
 
+# pane colors
+set -g pane-border-style "fg=color239"
+set -g pane-active-border-style "fg=white"
+
 # copy mode
 setw -g mode-style 'fg=pink bg=white dim'
 
