changed tmux tab color from Hephaestus

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -41,7 +41,7 @@ set -g status-right "#[fg=white bg=black] #(echo '#{pane_current_path}' | sed 's
 set -g status-right-length 50
 
 setw -g window-status-current-format ' #I #W #F '
-setw -g window-status-current-style 'fg=pink italics bold bg=white dim'
+setw -g window-status-current-style 'fg=pink italics bold bg=grey89 dim'
 
 setw -g window-status-style ' fg=white dim'
 setw -g window-status-format ' #I #W #F '
