tmux display-popup on Hephaestus

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,9 +17,12 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# Display popups
+unbind t
+bind t display-popup -d "#{pane_current_path}" #  -E "zsh"
 
 
-# DESIGN --v
+# DESIGN 
 
 # pane colors
 set -g pane-border-style "fg=color239"
