minor changes [Mercury]

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# yazi settings
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # enable vi keys
 set -g mode-keys vi
 setw -g mode-keys vi
@@ -19,7 +24,7 @@ bind -n M-l select-pane -R
 
 # Display popups
 unbind t
-bind t display-popup -d "#{pane_current_path}" #  -E "zsh"
+bind t display-popup -d "#{pane_current_path}" -E "zsh"
 
 
 # DESIGN 
