--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,9 @@ set -g renumber-windows on
 # config reload
 bind r source-file ~/.config/tmux/tmux.conf
 
+# change horizontal split key
+bind | split-window -h
+
 # pane switch with alt + vi keys
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
@@ -24,7 +27,7 @@ bind -n M-l select-pane -R
 
 # Display popups
 unbind t
-bind t display-popup -d "#{pane_current_path}" -E "zsh"
+bind t display-popup -x 90% -y 80% -S "fg=purple" -d "#{pane_current_path}" -E "zsh"
 
 
 # DESIGN 
@@ -42,7 +45,7 @@ set -g status-justify left
 set -g status-style 'bg=default'
 
 # set -g status-left '[#S]'
-set -g status-left '#[fg=white  italics bold bg=darkgreen] #S '
+set -g status-left '#[fg=white  italics bold bg=color34] #S '
 set -g status-left-length 10
 
 set -g status-right "#[fg=white bg=black] #(echo '#{pane_current_path}' | sed 's#$HOME#~#; s#\\([^/]*/[^/]*/\\).*\\(/[^/]*/.*\\)$#\\1 ... \\2#; s#/# > #g') " 
