--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,7 +45,7 @@ set -g status-justify left
 set -g status-style 'bg=default'
 
 # set -g status-left '[#S]'
-set -g status-left '#[fg=white  italics bold bg=color34] #S '
+set -g status-left '#[fg=color34  italics bold bg=color239 ] #S ' 
 set -g status-left-length 10
 
 set -g status-right "#[fg=white bg=black] #(echo '#{pane_current_path}' | sed 's#$HOME#~#; s#\\([^/]*/[^/]*/\\).*\\(/[^/]*/.*\\)$#\\1 ... \\2#; s#/# > #g') " 
