--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,10 +25,12 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+
 # Display popups
 unbind t
+unbind s
 bind t display-popup -x 90% -y 80% -S "fg=purple" -d "#{pane_current_path}" -E "zsh"
-
+bind s display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 # DESIGN 
 
